--- a/LB_2_11/Podfile
+++ b/LB_2_11/Podfile
@@ -2,4 +2,8 @@ target 'LB_2_11' do
 	pod 'SDWebImage', '~> 4.0'
 	pod 'KVOController'
 	pod 'AFNetworking', '~> 3.0'
+    pod 'JSONModel'
+    pod 'YYCache'
+    pod "Aspects"
+    pod 'YYModel'
 end
